--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,6 +11,12 @@
 <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" data-no-instant></script>
 <script data-no-instant>
   hljs.initHighlightingOnLoad();
+  InstantClick.on('change', function () {
+    var blocks = document.querySelectorAll('pre code');
+    for (var i = 0; i < blocks.length; i++) {
+      hljs.highlightBlock(blocks[i]);
+    }
+  });
 </script>
 </body>
 
