Change favicon path to /. Place favicon in static

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,8 +27,8 @@
   <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/atom-one-light.min.css" rel="stylesheet">
   <link href="{{.Site.BaseURL}}css/style.css" rel="stylesheet">
   <!-- Favicons -->
-  <link rel="apple-touch-icon" href="{{.Site.BaseURL}}img/apple-touch-icon.png">
-  <link rel="icon" href="{{.Site.BaseURL}}img/favicon.ico">
+  <link rel="apple-touch-icon" href="{{.Site.BaseURL}}/apple-touch-icon.png">
+  <link rel="icon" href="{{.Site.BaseURL}}/favicon.ico">
   <!-- Generator -->
   <meta name="generator" content="Hugo {{ .Hugo.Version }}">
   <!-- RSS -->
