--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,14 +25,14 @@
   <!-- Styles -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
   <link href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/atom-one-light.min.css" rel="stylesheet">
-  <link href="{{.Site.BaseURL}}css/style.css" rel="stylesheet">
+  <link href="{{.Site.BaseURL}}/css/style.css" rel="stylesheet">
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="{{.Site.BaseURL}}/apple-touch-icon.png">
   <link rel="icon" href="{{.Site.BaseURL}}/favicon.ico">
   <!-- Generator -->
   <meta name="generator" content="Hugo {{ .Hugo.Version }}">
   <!-- RSS -->
-  <link rel="alternate" type="application/atom+xml" href="{{.Site.BaseURL}}index.xml" title="{{ .Site.Title }}">
+  <link rel="alternate" type="application/atom+xml" href="{{.Site.BaseURL}}/index.xml" title="{{ .Site.Title }}">
 </head>
 <body class="{{if eq .Kind `page` }}single{{else}}list{{ if .IsHome }} home{{ end }}{{end}}">
   <header class="header">
