Update to correct path and filenames

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
 </footer>
 <script src="{{.Site.BaseURL}}/js/instantclick-3.0.1.min.js" data-no-instant></script>
 <script data-no-instant>InstantClick.init();</script>
-<script src="{{.Site.BaseURL}}/js/highlight-9.12.0.min.js" data-no-instant></script>
+<script src="{{.Site.BaseURL}}/js/highlightjs-9.12.0.min.js" data-no-instant></script>
 <script data-no-instant>
   hljs.initHighlightingOnLoad();
   InstantClick.on('change', function () {
