--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,9 +6,9 @@
   <span>&middot;</span>
   <span>Designed by <a href="https://ludviglundgren.com/" target="_blank">Ludvig Lundgren</a>️</span>
 </footer>
-<script src="{{.Site.BaseURL}}/js/instantclick.min.js" data-no-instant></script>
+<script src="https://cdn.bootcss.com/instantclick/3.0.1/instantclick.min.js" data-no-instant></script>
 <script data-no-instant>InstantClick.init();</script>
-<script src="{{.Site.BaseURL}}/js/highlight.min.js" data-no-instant></script>
+<script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js" data-no-instant></script>
 <script data-no-instant>
   hljs.initHighlightingOnLoad();
   InstantClick.on('change', function () {
